// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar Should render the Navbar with no props. 1`] = `
<nav
  class="relative bg-white shadow-lg flex flex-wrap items-center justify-between px-2 py-3 navbar-expand-lg"
  data-testid="navbar"
>
  <div
    class="container px-4 mx-auto flex flex-wrap items-center justify-between"
  >
    <div
      aria-labelledby="nav-item"
      class="w-full relative flex justify-between lg:w-auto lg:static lg:block lg:justify-start"
    >
      <a
        class="text-gray-800 text-sm font-bold leading-relaxed inline-block mr-4 py-2 whitespace-no-wrap uppercase"
        href="/"
      >
        Github Timeline
      </a>
      <button
        class="cursor-pointer text-xl leading-none px-3 py-1 border border-solid border-transparent rounded bg-transparent block lg:hidden outline-none focus:outline-none"
        type="button"
      >
        <i
          class="text-gray-800 fas fa-bars"
        >
          <img
            alt="burger-nav"
            src="Bars.svg"
          />
        </i>
      </button>
    </div>
    <div
      class="lg:flex flex-grow items-center bg-white lg:bg-transparent lg:shadow-none block rounded shadow-lg"
      data-testid="list"
      id="example-navbar-warning"
    >
      <ul
        class="flex flex-col lg:flex-row list-none mr-auto"
      >
        <li
          class="flex items-center"
        >
          <a
            class="text-gray-800 hover:text-gray-600 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"
            href="/jobs"
          >
            <i
              class="text-gray-500 far fa-file-alt text-lg leading-lg mr-2"
            />
             
            Jobs
          </a>
        </li>
      </ul>
      <ul
        class="flex flex-col lg:flex-row list-none lg:ml-auto"
      >
        <li
          class="flex items-center"
        >
          <a
            class="text-gray-800 hover:text-gray-600 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"
            href="/#twitter"
          >
            <i
              class="text-gray-500 fab fa-twitter text-lg leading-lg "
            />
            <span
              class="lg:hidden inline-block ml-2"
            >
              Tweet
            </span>
          </a>
        </li>
        <li
          class="flex items-center"
        >
          <a
            class="text-gray-800 hover:text-gray-600 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"
            href="/#github-stars"
          >
            <i
              class="text-gray-500 fab fa-github text-lg leading-lg "
            />
            <span
              class="lg:hidden inline-block ml-2"
            >
              Star
            </span>
          </a>
        </li>
      </ul>
    </div>
  </div>
</nav>
`;

exports[`Navbar Should render the Navbar. 1`] = `
<nav
  class="top-0 absolute z-50 w-full flex flex-wrap items-center justify-between px-2 py-3 navbar-expand-lg"
  data-testid="navbar"
>
  <div
    class="container px-4 mx-auto flex flex-wrap items-center justify-between"
  >
    <div
      aria-labelledby="nav-item"
      class="w-full relative flex justify-between lg:w-auto lg:static lg:block lg:justify-start"
    >
      <a
        class="text-white text-sm font-bold leading-relaxed inline-block mr-4 py-2 whitespace-no-wrap uppercase"
        href="/"
      >
        Github Timeline
      </a>
      <button
        class="cursor-pointer text-xl leading-none px-3 py-1 border border-solid border-transparent rounded bg-transparent block lg:hidden outline-none focus:outline-none"
        type="button"
      >
        <i
          class="text-white fas fa-bars"
        >
          <img
            alt="burger-nav"
            src="Bars.svg"
          />
        </i>
      </button>
    </div>
    <div
      class="lg:flex flex-grow items-center bg-white lg:bg-transparent lg:shadow-none hidden"
      data-testid="list"
      id="example-navbar-warning"
    >
      <ul
        class="flex flex-col lg:flex-row list-none mr-auto"
      >
        <li
          class="flex items-center"
        >
          <a
            class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"
            href="/jobs"
          >
            <i
              class="lg:text-gray-300 text-gray-500 far fa-file-alt text-lg leading-lg mr-2"
            />
             
            Jobs
          </a>
        </li>
      </ul>
      <ul
        class="flex flex-col lg:flex-row list-none lg:ml-auto"
      >
        <li
          class="flex items-center"
        >
          <a
            class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"
            href="/#twitter"
          >
            <i
              class="lg:text-gray-300 text-gray-500 fab fa-twitter text-lg leading-lg "
            />
            <span
              class="lg:hidden inline-block ml-2"
            >
              Tweet
            </span>
          </a>
        </li>
        <li
          class="flex items-center"
        >
          <a
            class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"
            href="/#github-stars"
          >
            <i
              class="lg:text-gray-300 text-gray-500 fab fa-github text-lg leading-lg "
            />
            <span
              class="lg:hidden inline-block ml-2"
            >
              Star
            </span>
          </a>
        </li>
      </ul>
    </div>
  </div>
</nav>
`;
